# aidan-dev-portfolio

./: .gitignore  README.md  app.py  passenger_wsgi.py  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
Portfolio/: __init__.py  about.py  app.py  auth.py  contact.py  projects.py  resume.py  schema.sql
Portfolio/static/css/: qrcodestylesheet.css  stylesheet.css
Portfolio/static/js/: ethRaffle.js  scroll.js
Portfolio/templates/: about.html  base.html  contact.html  ethRaffle.html  index.html  projects.html  qrcode.html  resume.html
api/: passenger_wsgi.py
appname/: __init__.py  auth.py
appname/templates/: base.html
appname/templates/auth/: login.html  register.html
portfolio/: __init__.py  generatesecret.py
portfolio/templates/: contact.html  projects.html  resume.html
portfolio/templates/auth/: login.html  register.html
