[project]
name = "portfolio"
version = "1.0.3"
description = "Aidan Gorny's portfolio application"
dependencies = [
    "flask",
    "python-dotenv",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.coverage.run]
branch = true
source = ["portfolio"]

requires-python = ">=3.9.21"