[project]
name = "portfolio"
version = "1.0.4"
description = "Aidan Gorny's portfolio application"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "python-dotenv",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.coverage.run]
branch = true
source = ["portfolio"]

[project.scripts]
app = "portfolio:create_app"
